<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OptionsActivity"
    style="@style/Background">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp">

        <ImageView
            android:id="@+id/back"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            style="@style/BackButton"/>

        <TextView
            style="@style/AppTitleColor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:fontFamily="@font/raleway_medium"
            android:text="@string/options"
            android:textSize="32sp" />

    </RelativeLayout>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        app:cardElevation="5dp"
        style="@style/Options">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/priority"
                android:fontFamily="@font/raleway_bold"
                android:textSize="26sp"
                android:layout_marginHorizontal="20dp"
                android:layout_marginVertical="15dp"
                style="@style/OptionsTextColor"/>

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/text_note"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginHorizontal="15dp"
                    android:text="@string/options_text"
                    android:textSize="22sp"
                    android:fontFamily="@font/raleway_medium"
                    style="@style/RadioButton"/>

                <RadioButton
                    android:id="@+id/audio_note"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginHorizontal="15dp"
                    android:layout_marginBottom="15dp"
                    android:checked="true"
                    android:text="@string/audio"
                    android:textSize="22sp"
                    android:fontFamily="@font/raleway_medium"
                    style="@style/RadioButton"/>

            </RadioGroup>

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="15dp"
        app:cardElevation="5dp"
        style="@style/Options">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/display"
                android:fontFamily="@font/raleway_bold"
                android:textSize="26sp"
                android:layout_marginHorizontal="20dp"
                android:layout_marginVertical="15dp"
                style="@style/OptionsTextColor"/>

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/grid"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginHorizontal="15dp"
                    android:text="@string/grid"
                    android:textSize="22sp"
                    android:fontFamily="@font/raleway_medium"
                    style="@style/RadioButton"/>

                <RadioButton
                    android:id="@+id/list"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginHorizontal="15dp"
                    android:layout_marginBottom="15dp"
                    android:checked="true"
                    android:text="@string/list"
                    android:textSize="22sp"
                    android:fontFamily="@font/raleway_medium"
                    style="@style/RadioButton"/>

            </RadioGroup>

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

</LinearLayout>