<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="10dp">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/recorder_panel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/AudioCardBackground"
        android:layout_centerInParent="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <View
                    android:layout_width="0dp"
                    android:layout_height="60dp"
                    android:layout_weight="1"/>

                <com.airbnb.lottie.LottieAnimationView
                    android:id="@+id/audio_anim"
                    android:layout_width="0dp"
                    android:layout_height="100dp"
                    android:layout_weight="1"
                    app:lottie_repeatMode="restart"
                    app:lottie_colorFilter="@color/light"
                    app:lottie_rawRes="@raw/audio_anim"
                    app:lottie_autoPlay="false"
                    app:lottie_loop="true"/>

                <ImageView
                    android:id="@+id/exit"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:layout_gravity="center"
                    android:src="@drawable/close_dialog" />

            </LinearLayout>

            <Chronometer
                android:id="@+id/chronometer"
                style="@style/TimerTextColor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/rubik_medium"
                android:layout_marginVertical="30dp"
                android:gravity="center"
                android:textSize="46sp"
                android:text="@string/timer_value" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="30dp">

                <ImageView
                    android:id="@+id/start_stop"
                    android:layout_width="0dp"
                    android:layout_height="60dp"
                    android:layout_weight="1"
                    android:src="@drawable/audio_start"/>

                <ImageView
                    android:id="@+id/play_pause"
                    android:layout_width="0dp"
                    android:layout_height="60dp"
                    android:layout_weight="1"
                    android:src="@drawable/audio_play"/>

            </LinearLayout>

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/save_panel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/AudioCardBackground"
        android:layout_alignParentBottom="true"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingHorizontal="15dp"
            android:layout_marginVertical="25dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/save_audio"
                android:textSize="24sp"
                android:fontFamily="@font/rubik_medium"
                android:gravity="center"
                style="@style/TimerTextColor"/>

            <EditText
                android:id="@+id/audio_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/your_audio"
                android:maxLines="1"
                android:textSize="24sp"
                android:fontFamily="@font/rubik_regular"
                android:layout_marginVertical="15dp"
                android:paddingVertical="15dp"
                android:paddingHorizontal="25dp"
                style="@style/AudioStroke"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/cancel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/cancel_audio"
                    android:textSize="20sp"
                    android:padding="15dp"
                    android:gravity="center"
                    android:layout_marginEnd="5dp"
                    android:fontFamily="@font/rubik_regular"
                    style="@style/Cancel"/>

                <TextView
                    android:id="@+id/save"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/save"
                    android:textSize="20sp"
                    android:padding="15dp"
                    android:gravity="center"
                    android:layout_marginStart="5dp"
                    android:fontFamily="@font/rubik_regular"
                    style="@style/Save"/>

            </LinearLayout>

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

</RelativeLayout>